--- a/ConsoleApp/appsettings.json
+++ b/ConsoleApp/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=.\\SQLEXPRESS;Database=YourDatabaseName;Trusted_Connection=True;"
+    "DatabaseConnection": "Server=LEWISMA\\SQLEXPRESS01;Database=Test;Trusted_Connection=True"
   },
-
+  
   "DbUp": {
     "MigrationScriptsFolder": "ReleaseNotes"
   }
