Completed DbUp POC

--- a/ConsoleApp/appsettings.json
+++ b/ConsoleApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=LEWISMA\\SQLEXPRESS01;Database=Test;Trusted_Connection=True"
+    "DatabaseConnection": "Server=LEWISMA\\SQLEXPRESS01;Database=Test;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   
   "DbUp": {
